--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "jsonwebtoken": "^9.0.2",
     "license": "^1.0.3",
     "mongoose": "^8.7.0",
+    "mysql2": "^3.11.3",
     "node": "^20.18.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
+    "sequelize": "^6.37.4",
     "socket.io": "^4.8.0",
     "uuid": "^10.0.0"
   },
