--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "pg": "^8.13.0",
     "sequelize": "^6.37.4",
     "socket.io": "^4.8.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0"
   },
   "scripts": {
